# kdeboard-notifier

./: .gitignore  Cargo.toml  README.md  generate-flatpak-sources.sh  io.github.tacticallaptopbag.KDEBoardNotifier.yaml
assets/: kdeboard-notifier.desktop
src/: config.rs  kde_theme.rs  main.rs  setup.rs  tray.rs
